--- a/chat-firebase/index.html
+++ b/chat-firebase/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mini Chat Firebase</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="chat-container">
@@ -14,9 +14,11 @@
     <button id="sendButton">Enviar</button>
   </div>
 
-  <!-- Firebase SDKs -->
+  <!-- Firebase deve vir ANTES do script.js -->
   <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js"></script>
+
+  <!-- Seu código vem depois -->
   <script src="script.js"></script>
 </body>
 </html>
