--- a/chat-firebase/index.html
+++ b/chat-firebase/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mini Chat Firebase</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>💬 Mini Chat Firebase</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,13 +12,14 @@
     <div id="messages"></div>
     <input type="text" id="messageInput" placeholder="Digite sua mensagem..." />
     <button id="sendButton">Enviar</button>
+    <button id="toggleDark">🌙/☀️</button>
   </div>
 
-  <!-- Firebase deve vir ANTES do script.js -->
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js"></script>
+  <!-- Firebase compat (browser-friendly) -->
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-database-compat.js"></script>
 
-  <!-- Seu código vem depois -->
+  <!-- Seu script -->
   <script src="script.js"></script>
 </body>
 </html>
