--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terminal Web Simulado</title>
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Chat com Gemini</title>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet" />
   <style>
     body {
       margin: 0;
@@ -49,6 +49,8 @@
       padding: 1rem;
       background-color: #1e1e1e;
       overflow-y: auto;
+      display: flex;
+      flex-direction: column;
     }
 
     .open-btn {
@@ -60,6 +62,7 @@
       font-size: 14px;
       cursor: pointer;
       margin-bottom: 1rem;
+      width: fit-content;
     }
 
     .open-btn:hover {
@@ -73,6 +76,8 @@
       border-radius: 5px;
       font-size: 14px;
       white-space: pre-wrap;
+      flex: 1;
+      overflow-y: auto;
     }
 
     .prompt {
@@ -94,47 +99,74 @@
       outline: none;
       flex: 1;
     }
+
+    .user {
+      color: #9cdcfe;
+    }
+
+    .bot {
+      color: #ce9178;
+    }
   </style>
 </head>
 <body>
+
   <div class="sidebar">
     <h2>Menu</h2>
     <ul>
-      <li>Terminal</li>
-      <li>Logs</li>
+      <li>Chat</li>
+      <li><a href="/log/{{ sess_id }}" style="text-decoration:none; color:inherit;">Histórico</a></li>
       <li>Config</li>
     </ul>
   </div>
+
   <div class="main">
     <button class="open-btn" onclick="window.open('https://9000-idx-googlepythontest-1744324974220.cluster-etsqrqvqyvd4erxx7qq32imrjk.cloudworkstations.dev/', '_blank')">
       Abrir Cloud Workstations 🚀
     </button>
 
-    <div class="terminal" id="terminal">
-      <div>> Bem-vindo ao terminal interativo!</div>
+    <div class="terminal" id="mensagens">
+      > Bem-vindo ao chat com Gemini!
     </div>
 
     <div class="input-line">
       <span class="prompt">$</span>
-      <input type="text" id="cmdInput" placeholder="Digite um comando...">
+      <input type="text" id="entrada" placeholder="Digite sua mensagem..." />
     </div>
   </div>
 
   <script>
-    const terminal = document.getElementById('terminal');
-    const input = document.getElementById('cmdInput');
+    const entrada = document.getElementById("entrada");
+    const mensagens = document.getElementById("mensagens");
 
-    input.addEventListener('keydown', function (e) {
-      if (e.key === 'Enter') {
-        const cmd = input.value.trim();
-        if (cmd) {
-          terminal.innerHTML += `<div class="prompt">$ ${cmd}</div>`;
-          terminal.innerHTML += `<div>Saída simulada de "${cmd}"</div>`;
-        }
-        input.value = '';
-        terminal.scrollTop = terminal.scrollHeight;
+    async function enviar() {
+      const pergunta = entrada.value.trim();
+      if (!pergunta) return;
+      mensagens.innerHTML += `<div class="prompt user">$ ${pergunta}</div>`;
+      entrada.value = "";
+      entrada.disabled = true;
+
+      try {
+        const resp = await fetch("/api/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ mensagem: pergunta })
+        });
+        const json = await resp.json();
+        mensagens.innerHTML += `<div class="bot">🤖 Gemini > ${json.resposta}</div>`;
+      } catch (e) {
+        mensagens.innerHTML += `<div class="bot">❌ Erro ao conectar com a IA.</div>`;
       }
+
+      mensagens.scrollTop = mensagens.scrollHeight;
+      entrada.disabled = false;
+      entrada.focus();
+    }
+
+    entrada.addEventListener("keydown", function (e) {
+      if (e.key === "Enter") enviar();
     });
   </script>
+
 </body>
 </html>
